# NXSSetup

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh
.github/workflows/: publish-on-push.yml
logo/: gimp.xcf
src/: help.rs  main.rs  options.rs
src/builder/: atmosphere.rs  generic.rs  mod.rs  release.rs
src/exporter/: device.rs  dir.rs  mod.rs
src/ui/: category.rs  checkbox.rs  collider.rs  colors.rs  group.rs  mod.rs  separator.rs  subtitle.rs  text.rs  title.rs  utils.rs  window.rs
