[package]
name = "nxssetup"
version = "0.2.0-87"
authors = ["Oojmed"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# termion = "1.5.4"
termion = { git = "https://github.com/ErichDonGubler/termion", branch = "windows" }
crossterm = "0.14.1"

num_cpus = "1.11.1"

reqwest = { version = "0.10.0", features = ["blocking"] }
serde_json = "1.0.44"
zip = "0.5.3"