[package]
name = "nxssetup"
version = "0.3.0-257"
authors = ["Oojmed"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# termion = "1.5.4"
termion = { git = "https://github.com/ErichDonGubler/termion", branch = "windows" }
crossterm = "0.14.1"

num_cpus = "1.11.1"

reqwest = { version = "0.10.0", features = ["blocking"] }
serde_json = "1.0.44"
zip = "0.5.3"

strip-ansi-escapes = "0.1.0"

walkdir = "2.3.1"